@@ -2,7 +2,7 @@ AC_INIT(lazyfs.c)
 AC_CONFIG_HEADER(config.h)
 AC_PROG_MAKE_SET
 
-COMMA_VERSION="0d1d25"
+COMMA_VERSION="0d1d26"
 
 AC_PROG_CC
 
